Fixes: - reset CSS settings for table-nowrap -> fix indicators view; - create new CSS class "notice-table-nowrap" for notices view -> fix notices view.

--- a/src/main/webapp/app/styles/common.css
+++ b/src/main/webapp/app/styles/common.css
@@ -892,15 +892,21 @@ tr.nmc-main-table-header-indicator > th {
     padding: 0 !important;
 }
 
-
 /* Стиль, запрещающий многострочность в ячейке таблицы. Используются на страницах Уведомления и Показания для того,
     чтобы данные внутри ячейки отображались в одну строку.
 */
-.nmc-table-nowrap-data > tbody > tr > td{
+.nmc-notice-table-nowrap-data > tbody > tr > td{
     white-space: nowrap; /* Запрещаем перенос строк */
     overflow: auto; /*Обрезаем все, что не вмещается*/
     text-overflow: ellipsis;/* Добавляем многоточие*/
     padding: 1px 5px; /* Устанавливаем отступ от границ ячейки = 1*/
+ }
+
+.nmc-table-nowrap-data > tbody > tr > td{
+    white-space: nowrap; /* Запрещаем перенос строк */
+    overflow: auto; /*Обрезаем все, что не вмещается*/
+    text-overflow: ellipsis;/* Добавляем многоточие*/
+    padding: 1px;/* Устанавливаем отступ от границ ячейки = 1*/
  }
 
 .nmc-table-nowrap-data1{
